@@ -403,6 +403,8 @@
 	- renamed get_png_IDAT_data() to get_png_data()
 	- added option "write_avi" to control creation of .avi files
 	- renamed open_mng_and_skip_header() to open_mng_and_skip_sig()
+	- added get_MHDR_data()
+	- added "width" and "height" for MNGs to XML output
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
